--- a/mappings/descriptors/tenants/257378186566963200.yml
+++ b/mappings/descriptors/tenants/257378186566963200.yml
@@ -1,7 +1,9 @@
 ---
+# yaml-language-server: $schema=../../.schema/descriptors.schema.yaml
+
 # A test mapping file for tenant 257378186566963200 referred as foo.example.com
 name: FOO.EXAMPLE.CO ORG mappings
 description: Descriptor mappings for tenant FOO.EXAMPLE.CO
 mappings:
   example: one
-  exampleTwo: two
+  example_two: two
